@startuml
'https://plantuml.com/class-diagram
class Protagonista
class Menu
class BovedaCristales
class FusionadorEnergon
class AdministradorTransformers
class TablaClasificacion
class Utilidades

class Juego {
    - Protagonista protagonista
    - Menu menu
    - BovedaCristales boveda
    - FusionadorEnergon fusionador
    - bool juego_en_curso
    - string nombre_jugador
    - AdministradorTransformers administrador_transformers
    - TablaClasificacion tabla_clasificacion
    ---
    + Juego()
    + void procesar_menu_principal(opcion_menu : const char&,  nombre : const &string)
    + bool jugando() const
    + void respuesta_personaje(mensaje : const string&)
    + void manejar_sugerencia_personaje()
    + void manejar_opcion_escribir_mensaje()
    + void manejar_cambiar_estado()
    + void fusionador_de_cristales(entrada_1 : const int&,entrada_2 : const int&)
    + void manejar_fusionar_de_cristales()
    + void manejar_de_almacenamiento_de_cristales()
    + void mostrar_boveda()
    + void manejar_exportar_boveda(ruta : string&)
    + void manejar_de_bodega_mostrar_tamanio()
    + void manejar_equipar_un_cristal()
    + void mostrar_cantidad_cristales_equipados()
    + void manejar_boveda()
    + std::string convertir_faccion_string(faccion : const int&)
    + void manejar_crear_transformers()
    + void manejar_buscar_transformers()
    + void manejar_eliminar_transformers()
    + void manejar_transformar()
    + void mostrar_transformers_secundarios()
    + string solicitar_nombre_transformers()
    + int solicitar_vehiculo(faccion : const int&)
    + int solicitar_faccion()
    + string convertir_vehiculo_string(vehiculo : const int&)
    + void manejar_agregar_transformers(nombre : const string&, fuerza : const int&, defensa : const int&, velocidad : const int&, faccion : const string&, vehiculo : const string&)
    + void crear_transformers(nombre : const string&, tipo_vehiculo : const int&)
    + void manejar_crear_autobots(nombre : const string&)
    + void manejar_crear_decepticons(nombre : const string&)
    + void manejar_flujo_juego_principal()
    + bool verificar_entrada_del_cristal(entrada : const int&)
    + void manejar_administrar_transformers()
    + void manejar_interactuar_con_el_personaje()
    + void mostrar_tabla_clasificacion()
    + int calcular_estadistica(estadistica_base : const int&)
}

' Relaciones
Juego --> Protagonista : "usa"
Juego --> Menu : "usa"
Juego --> BovedaCristales : "contiene"
Juego --> FusionadorEnergon : "usa"
Juego --> AdministradorTransformers : "usa"
Juego --> TablaClasificacion : "usa"
Juego --> Utilidades : "usa"

@enduml